// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dokončeno + neaktivní 1`] = `
<div
  className="Legenda"
>
  Legenda: 
  <span
    className="Legenda__item Legenda__item--dokonceno label label-default"
  >
    dokončeno
  </span>
  <span
    className="Legenda__item Legenda__item--nedokonceno label label-default"
  >
    nedokončeno
  </span>
  <span
    className="Legenda__item Legenda__item--na-trase label label-default"
  >
    na trase
  </span>
  <span
    className="Legenda__item Legenda__item--neaktivni label label-default"
  >
    neaktivní
  </span>
</div>
`;

exports[`renders dokončeno 1`] = `
<div
  className="Legenda"
>
  Legenda: 
  <span
    className="Legenda__item Legenda__item--dokonceno label label-default"
  >
    dokončeno
  </span>
  <span
    className="Legenda__item Legenda__item--nedokonceno label label-default"
  >
    nedokončeno
  </span>
  <span
    className="Legenda__item Legenda__item--na-trase label label-default"
  >
    na trase
  </span>
</div>
`;
